# app/greeter/internal/server/http.go
@@ -4,6 +4,7 @@ import (
 	nethttp "net/http"
 
 	v1 "greeter/api/greeter/helloworld/v1"
+	ordersv1 "greeter/api/greeter/orders/v1"
 	"greeter/app/greeter/internal/conf"
 	"greeter/app/greeter/internal/service"
 
@@ -14,7 +15,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, orders *service.OrdersService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -33,6 +34,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	srv := http.NewServer(opts...)
 	srv.HandleFunc("/healthz", healthz)
 	v1.RegisterGreeterHTTPServer(srv, greeter)
+	ordersv1.RegisterOrdersHTTPServer(srv, orders)
 	return srv
 }
 
